--- a/core/templates/blog/post_list.html
+++ b/core/templates/blog/post_list.html
@@ -21,12 +21,14 @@
                     <h2>{{post.id}}-{{post.title}}</h2>
                 </a>
                 <p2>{{post.content}}</p2>
+                {% if request.user.is_superuser or post.author.user == request.user %}
                 <a href="{% url 'blog:post-edit' pk=post.id %}">
                     <p>EDIT</p>
                     <a href="{% url 'blog:post-delete' pk=post.id %}">
                         <p>DELETE MF</p>
                     </a>
                 </a>
+                {% endif %}
                 <small>{{post.author.first_name}} {{post.author.last_name}}/{{post.created_date}}</small>
                 <hr>
             </li>
