--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -70,7 +70,7 @@
                     <ul class="nav-menu">
                         <li><a href="{% url 'website:index' %}">Home</a></li>
                         <li><a href="{% url 'website:about' %}">About</a></li>
-                        <li><a href="{% url 'blog:index' %}">Blog</a></li>
+                        <li><a href="{% url 'website:blog-home' %}">Blog</a></li>
                         </li>
                         <li class="menu-has-children"><a href="">Pages</a>
                             <ul>
