--- a/core/templates/blogApi/blog-ads.html
+++ b/core/templates/blogApi/blog-ads.html
@@ -3,4 +3,8 @@
 
 <div class="single-sidebar-widget ads-widget">
     <a href="#"><img class="img-fluid" src="{% static 'img/blog/ads-banner.jpg' %}" alt=""></a>
+    <p>
+        for any add inquiry, you can contact me at
+        <a href="mailto:amir.kohzadi@gmail.com">this email address!</a>
+    </p>
 </div>
