--- a/core/templates/blogApi/blog-newsletter.html
+++ b/core/templates/blogApi/blog-newsletter.html
@@ -17,7 +17,7 @@
                     onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter email'">
             </div>
         </div>
-        <a href="#" class="bbtns">Subcribe</a>
+        <a href="#" class="bbtns">Subscribe</a>
     </div>
     <p class="text-bottom">
         You can unsubscribe at any time
