--- a/core/templates/blogApi/blog-single.html
+++ b/core/templates/blogApi/blog-single.html
@@ -35,7 +35,7 @@
 					</div>
 					<div class="col-lg-3  col-md-3 meta-details">
 						<ul class="tags">
-							{% for cat in post.category.all %}
+							{% for cat in post.categories.all %}
 							<a href="#">{{cat.name}}</a>{% if not forloop.last %}, {% endif %}
 							{% endfor %}
 						</ul>
@@ -188,12 +188,12 @@
 			</div>
 			<div class="col-lg-4 sidebar-widgets">
 				<div class="widget-wrap">
-					{% include 'blog/blog-search.html' %}
-					{% include 'blog/blog-writer.html' %}
+					{% include 'blogApi/blog-search.html' %}
+					{% include 'blogApi/blog-writer.html' %}
 					{% latestpost %}
-					{% include 'blog/blog-ads.html' %}
-					{% include 'blog/blog-post-categories.html' %}
-					{% include 'blog/blog-tags.html' %}
+					{% include 'blogApi/blog-ads.html' %}
+					{% include 'blogApi/blog-post-categories.html' %}
+					{% include 'blogApi/blog-tags.html' %}
 				</div>
 			</div>
 		</div>
