--- a/core/templates/blogApi/blog-tags.html
+++ b/core/templates/blogApi/blog-tags.html
@@ -1,10 +1,23 @@
 {% load static %}
 
 <div class="single-sidebar-widget tag-cloud-widget">
-    <h4 class="tagcloud-title">Tag Clouds</h4>
-    <ul>
-        {% for tag in post.tags.all %}
-        <li><a href="{% url 'blog:tag' tag_name=tag.name %}">{{tag.name}}</a></li>
-        {% endfor %}
-    </ul>
+    <h4 class="tagcloud-title">Categories</h4>
+    <ul id="category-list"></ul>
 </div>
+<script>
+    window.addEventListener('load', function () {
+        if (!window.jQuery) {
+            return;
+        }
+        $.getJSON("{% url 'blog:api-v1:category-list' %}", function (data) {
+            var categories = data.results || data;
+            var $list = $("#category-list");
+            $list.empty();
+
+            categories.forEach(function (cat) {
+                var link = "{% url 'website:blog-home' %}?categories=" + encodeURIComponent(cat.id);
+                $list.append('<li><a href="' + link + '">' + cat.name + '</a></li>');
+            });
+        });
+    });
+</script>
